# perun-cosmwasm-contract

./: .gitignore  .rusty-hook.toml  Cargo.toml  Makefile.toml  README.md  ci.sh
.github/workflows/: rust.yml
commands/: Cargo.toml  Makefile.toml
commands/golang/: Cargo.toml
commands/golang/src/: main.rs
commands/schema/: Cargo.toml
commands/schema/src/: main.rs
commands/serde/: Cargo.toml
commands/serde/src/: main.rs
examples/: golang.rs  schema.rs  schema_gen.rs  serde.rs
go-encoding/: encoding.go
perun_cosmwasm/: Cargo.toml  Makefile.toml  deploy.sh
perun_cosmwasm/src/: contract.rs  crypto.rs  lib.rs  msg.rs  types.rs
perun_cosmwasm/src/mock/: crypto.rs  setup.rs
perun_cosmwasm/src/test/: conclude.rs  crypto.rs  deposit.rs  dispute.rs  mod.rs  serde.rs  types.rs  withdraw.rs
schema/: dispute_response.json  execute_msg.json  query_msg.json
serde/: ids.json
src/: contract.rs  crypto.rs  error.rs  lib.rs  msg.rs  storage.rs  types.rs
src/test/: conclude.rs  crypto.rs  deposit.rs  dispute.rs  mod.rs  serde.rs  types.rs  withdraw.rs
src/test/common/: mod.rs  random.rs  setup.rs
tests/: conclude.rs  crypto.rs  deposit.rs  dispute.rs
tests/common/: crypto.rs  mod.rs  random.rs  setup.rs
