[package]
name = "perun-cosmwasm"
version = "0.1.0"
authors = ["PolyCrypt GmbH <info@polycry.pt>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://polycry.pt/"
readme = "README.md"

exclude = [
  "schemata/*",
  "artefacts/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[profile.test]
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "0.16.0"
cosmwasm-storage = "0.16.0"
cw-storage-plus = "0.8.0"
cw0 = "0.8.0"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
sha2 = "0.9.3"
thiserror = { version = "1.0.24" }
serde_jcs = "0.1.0"

[dev-dependencies]
cosmwasm-crypto = "0.16.0"
cosmwasm-schema = "0.16.0"
rand_core = { version = "0.6.3", features = ["getrandom"] }
k256 = { version = "0.9.6", features = ["ecdsa", "sha256"] }
# Needed for test/common
rand = "0.8.4"
serde_json = "1.0"
hex = "0.4.3"
serde-reflection = "0.3.3"
serde-generate = "0.19.3"
