[package]
name = "perun-cosmwasm"
version = "0.1.0"
authors = ["PolyCrypt GmbH <info@polycry.pt>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://polycry.pt/"
readme = "README.md"

exclude = [
  "schemata/*",
  "artefacts/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[profile.test]
overflow-checks = true

[features]
default = [ "rand" ]
backtraces = ["cosmwasm-std/backtraces"]
expose_mock = [ "rand" ]

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = "0.8.0"
cw0 = "0.8.0"
getrandom = { version = "0.2", features = ["js"] } 
k256 = { version = "0.9.6", features = ["ecdsa", "sha256"] }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
sha2 = "0.9.3"
thiserror = { version = "1.0.24" }
#rmp-serde = "0.15.5"
bcs = "0.1.3"
rand = { version = "0.8.4", optional = true }

[dev-dependencies]
cosmwasm-crypto = "0.16.0"
cosmwasm-schema = { version = "0.14.0" }
rand_core = { version = "0.6.3", features = ["getrandom"] }
rusty-hook = "0.11.2"
