[package]
name = "perun-cosmwasm"
version = "0.1.0"
authors = ["PolyCrypt GmbH <info@polycry.pt>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://polycry.pt/"
readme = "README.md"

exclude = [
  "schemata/*",
  "artefacts/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[profile.test]
overflow-checks = true

[features]
default = [  ]
backtraces = [ "cosmwasm-std/backtraces" ]
expose_mock = [ "rand", "getrandom", "k256" ]

[dependencies]
cosmwasm-std = "0.16.0"
cosmwasm-storage = "0.16.0"
cw-storage-plus = "0.8.0"
cw0 = "0.8.0"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
sha2 = "0.9.3"
thiserror = { version = "1.0.24" }
bcs = "0.1.3"
# Randomness deps
getrandom = { version = "0.2", optional = true } 
k256 = { version = "0.9.6", features = ["ecdsa"], optional = true }
rand = { version = "0.8.4", optional = true }

[dev-dependencies]
#cosmwasm-schema = { version = "0.14.0" }
rand_core = { version = "0.6.3", features = ["getrandom"] }
rusty-hook = "0.11.2"
# Randomness deps
getrandom = { version = "0.2" } 
k256 = { version = "0.9.6", features = ["ecdsa"] }
rand = { version = "0.8.4" }
